--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
